# ray

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  impl_consts.wasm  scratch.wasm  test.html
.cargo/: config.toml
.github/: copilot-instructions.md
crates/ray-codegen/: Cargo.toml
crates/ray-codegen/src/: lib.rs  macros.rs  mangle.rs  mono.rs
crates/ray-codegen/src/codegen/: mod.rs
crates/ray-codegen/src/codegen/llvm/: mod.rs
crates/ray-codegen/src/codegen/llvm/context/: builtins.rs  calls.rs  mod.rs  panic_unwind.rs  rc.rs  stderr.rs
crates/ray-codegen/src/libgen/: mod.rs
crates/ray-codegen/src/lir/: builder.rs  drop_glue.rs  generate.rs  mod.rs  panic_checks.rs  types.rs
crates/ray-codegen/src/modules/: mod.rs
crates/ray-core/: Cargo.toml
crates/ray-core/src/: lib.rs  macros.rs  typing.rs
crates/ray-core/src/ast/: asm.rs  collect.rs  file.rs  lower.rs  mod.rs  module.rs  node.rs  old_collect.rs  path.rs  transform.rs  walk.rs
crates/ray-core/src/ast/expr/: assign.rs  binop.rs  block.rs  boxed.rs  builtin_call.rs  c.rs  call.rs  cast.rs  closure.rs  curly.rs  decl.rs  decorator.rs  deref.rs  dict.rs  dot.rs  export.rs  expr.rs  for_loop.rs  fstring.rs  func.rs  ifexpr.rs  import.rs  index.rs  list.rs  literal.rs  local.rs  loop_loop.rs  matchexpr.rs  missing.rs  mod.rs  name.rs  new.rs  nil.rs  nil_coalesce.rs  op.rs  paren.rs  pattern.rs  range.rs  rf.rs  scoped_access.rs  (+7 more)
crates/ray-core/src/ast/modifier/: mod.rs
crates/ray-core/src/ast/token/: mod.rs
crates/ray-core/src/bga/: mod.rs
crates/ray-core/src/codegen/: mod.rs
crates/ray-core/src/codegen/llvm/: attr.rs  mod.rs
crates/ray-core/src/collect/: ast.rs  mod.rs
crates/ray-core/src/collections/: mod.rs  nametree.rs
crates/ray-core/src/convert/: mod.rs
crates/ray-core/src/errors/: mod.rs  type_error.rs
crates/ray-core/src/ide/: mod.rs  semantic_tokens.rs
crates/ray-core/src/infer/: mod.rs
crates/ray-core/src/libgen/: mod.rs
crates/ray-core/src/lir/: builder.rs  generate.rs  intrinsics.rs  mod.rs  types.rs  visitor.rs
crates/ray-core/src/parse/c/: mod.rs
crates/ray-core/src/parse/lexer/: mod.rs
crates/ray-core/src/parse/parser/: atoms.rs  collections.rs  context.rs  control.rs  decl.rs  expr.rs  func.rs  imports.rs  macros.rs  mod.rs  ops.rs  tests.rs  ty.rs
crates/ray-core/src/passes/: binding.rs  call_resolution.rs  closure.rs  deps.rs  extern_bindings.rs  manager.rs  mod.rs
crates/ray-core/src/pathlib/: filepath.rs  mod.rs  raypaths.rs
crates/ray-core/src/sema/: closure.rs  mangle.rs  mod.rs  modules.rs  monomorphize.rs  nameresolve.rs  root.rs  symbols.rs
crates/ray-core/src/sort/: index.rs  mod.rs  topological.rs
crates/ray-core/src/sourcemap/: mod.rs
crates/ray-core/src/span/: parsed.rs  source.rs
crates/ray-core/src/transform/: mod.rs
crates/ray-core/src/typing/: binding.rs  bound_names.rs  collect.rs  context.rs  error.rs  info.rs  macros.rs  mod.rs  traits.rs  ty.rs
crates/ray-core/src/typing/constraints/: mod.rs  satisfiable.rs  tree.rs
crates/ray-core/src/typing/infer/: mod.rs
crates/ray-core/src/typing/solvers/: greedy.rs
crates/ray-core/src/typing/stil/: ambiguity.rs  context.rs  infer.rs  tymatch.rs
crates/ray-core/src/utils/: mod.rs
crates/ray-core/tests/: receiver_mode.rs  super_traits.rs
crates/ray-driver/: Cargo.toml  build.rs
crates/ray-driver/src/: analyze.rs  build.rs  discovery.rs  global_options.rs  inspect.rs  lib.rs  test.rs  tests.rs
crates/ray-driver/tests/: lir.rs  llvm.rs  receiver_methods.rs  symbol_collection.rs  type_checker.rs  utils.rs
crates/ray-frontend/: Cargo.toml
crates/ray-frontend/src/: cache.rs  lib.rs  query.rs
crates/ray-frontend/src/persistence/: file_backend.rs  mod.rs  redb_backend.rs
crates/ray-frontend/src/queries/: auto_derive.rs  bindings.rs  calls.rs  closures.rs  completion.rs  defs.rs  deps.rs  diagnostics.rs  display.rs  expected_type.rs  exports.rs  imports.rs  inlay_hints.rs  items.rs  libraries.rs  locations.rs  methods.rs  mod.rs  operators.rs  ownership.rs  parse.rs  ref_mutability.rs  regions.rs  resolve.rs  scope.rs  semantic_tokens.rs  symbols.rs  transform.rs  typecheck.rs  types.rs  validation.rs  workspace.rs
crates/ray-lir/: Cargo.toml
crates/ray-lir/src/: intrinsics.rs  lib.rs  transform.rs  tree_shake.rs  types.rs  visitor.rs
crates/ray-lsp/: Cargo.toml
crates/ray-lsp/src/: diagnostics.rs  helpers.rs  lib.rs  main.rs  semantic_tokens.rs  server.rs  symbols.rs  workspace.rs
crates/ray-toolchain/: Cargo.toml
crates/ray-toolchain/src/: helpers.rs  install.rs  lib.rs  manager.rs  resolve.rs
crates/ray-typing/: Cargo.toml  audit.md  spec_coverage.md
crates/ray-typing/src/: assumptions.rs  binding_groups.rs  bound_names.rs  bundles.rs  call_resolution.rs  constraint_tree.rs  constraints.rs  context.rs  defaulting.rs  env.rs  error.rs  generalize.rs  goal_solver.rs  impl_match.rs  info.rs  lib.rs  mocks.rs  path.rs  state.rs  term_solver.rs  traits.rs  ty.rs  tyctx.rs  types.rs  unify.rs
crates/ray-typing/src/constraints/: mod.rs  tree.rs
crates/ray-typing/src/top/: directives.rs
crates/ray-typing/src/top/constraint/: equality.rs  info.rs  mod.rs  polymorphism.rs  qualifier.rs
crates/ray-typing/src/top/interface/: basic.rs  mod.rs  qualification.rs  subst.rs  type_inference.rs
crates/ray-typing/src/top/solver/: greedy.rs  info.rs  mod.rs
crates/ray-typing/src/top/state/: basic.rs  mod.rs  overloading.rs
crates/ray-typing/src/top/types/: mod.rs  predicates.rs  primitive.rs  qualification.rs  quantification.rs  schemes.rs  subst.rs  synonym.rs  unification.rs
crates/ray-typing/src/top/util/: display_vec.rs  mod.rs  union.rs
docs/: building-and-running.md  cli.md  current-type-system-summary.md  goals.md  grammar.ebnf  ide-identifers.md  incremental.md  internals.md  language-overview.md  lsp.md  panic-recover.md  parser.md  parser_recovery.md  pointer-arithmetic.md  references.md  standard-library.md  type-system.md
examples/: add_trait_no_core.ray  box.ray  counter.ray  deref.ray  hello_world.ray  (+16 more)
(+452 files in other folders)
