[package]
name = "ray"
version = "0.1.0"
authors = ["Jeremy Jacobson <jjacobson93@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/top",
    "crates/wasi_malloc",
    "crates/ray-backend",
    "crates/ray-cfg",
    "crates/ray-core",
    "crates/ray-lsp",
    "crates/ray-shared",
    "crates/ray-toolchain",
]

[dependencies]
clap = { version = "4.5", features = ["color", "derive", "env"] }
colored = "2.0"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
pprof = { version = "0.15.0", features = ["protobuf-codec", "flamegraph"] }
ray-core = { path = "crates/ray-core" }
ray-driver = { path = "crates/ray-driver" }
ray-lsp = { path = "crates/ray-lsp" }
ray-shared = { path = "crates/ray-shared" }
ray-toolchain = { path = "crates/ray-toolchain" }

[profile.dev]
opt-level = 0
debug = 2
split-debuginfo = "unpacked"
