[package]
name = "ray"
version = "0.1.0"
authors = ["Jeremy Jacobson <jjacobson93@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/wasi_malloc",
    "crates/ray-cfg",
    "crates/ray-core",
    "crates/ray-frontend",
    "crates/ray-lsp",
    "crates/ray-shared",
    "crates/ray-typing",
]

[dependencies]
clap = { version = "4.5", features = ["color", "derive", "env"] }
colored = "2.0"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
anyhow = "1.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.10"
ureq = { version = "3.1", features = ["json"] }
ray-core = { path = "crates/ray-core" }
ray-driver = { path = "crates/ray-driver" }
ray-lsp = { path = "crates/ray-lsp" }
ray-shared = { path = "crates/ray-shared" }

[profile.dev]
opt-level = 0
debug = 2
split-debuginfo = "unpacked"
