[package]
name = "ray-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
fern = { version = "0.6" }
itertools = "0.14"
log = "0.4"
inkwell = { version = "0.6", features = ["llvm17-0"] }
ray-core = { path = "../ray-core" }
ray-shared = { path = "../ray-shared" }
ray-typing = { path = "../ray-typing" }
