[package]
name = "ray-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
log = "0.4"
ray-core = { path = "../ray-core" }
ray-query-macros = { path = "../ray-query-macros" }
ray-shared = { path = "../ray-shared" }
ray-typing = { path = "../ray-typing" }
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
tempfile = "3"
