[package]
name = "ray-lir"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
petgraph = { version = "0.5.1", features = ["serde-1"] }
ray-core = { path = "../ray-core" }
ray-shared = { path = "../ray-shared" }
ray-typing = { path = "../ray-typing" }
serde = { version = "1.0", features = ["derive", "rc"] }
