[package]
name = "ray-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
fern = { version = "0.6" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "time"] }
tower-lsp = "0.20"
log = "0.4"
env_logger = "0.10"
ray-cfg = { path = "../ray-cfg" }
ray-codegen = { path = "../ray-codegen" }
ray-core = { path = "../ray-core" }
ray-driver = { path = "../ray-driver" }
ray-frontend = { path = "../ray-frontend" }
ray-shared = { path = "../ray-shared" }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3"
