[package]
name = "ray-typing"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14"
log = "0.4"
ray-shared = { path = "../ray-shared" }
serde = { version = "1.0", features = ["derive"] }
